# smartobjectpool

./: CMakeLists.txt  README.md  SharedPool.h  SomeHeavyObj.h  UniquePool.h  main.cpp
test/: sharedPool_test.cpp  uniquePool_test.cpp
